--- a/package.json
+++ b/package.json
@@ -3,19 +3,27 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "heroku-prebuild": "rm -rf node_modules && npm cache clean --force",
+    "postinstall": "ng build --aot -prod",
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node app.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
+  "engines": {
+    "node": "9.11.1",
+    "npm": "5.6.0"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.10",
     "@angular/cdk": "^6.0.1",
+    "@angular/cli": "~1.7.4",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
@@ -25,12 +33,12 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "dotenv": "^5.0.1",
+    "express": "^4.16.3",
     "rxjs": "^5.5.6",
+    "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.4",
-    "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
@@ -45,7 +53,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "tslint": "~5.9.1"
   }
 }
